// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GiftGrid/> debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h3>
    One Punch
  </h3>
  <p>
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GiftGrid/> debe de mostrar items cuando se cargan imagenes en useFetchGifs 1`] = `
<Fragment>
  <h3>
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      gif={
        Object {
          "id": "ABC",
          "title": "One Punch",
          "url": "https://media1.giphy.com/media/l0HlJn1y7z2QkQ7p2/200w.gif",
        }
      }
      key="ABC"
    />
  </div>
</Fragment>
`;
